--- a/package.json
+++ b/package.json
@@ -19,34 +19,36 @@
   "dependencies": {
     "@fontsource/fira-code": "^4.2.2",
     "@fontsource/fira-sans": "^4.2.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-router-dom": "5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^10.4.9",
-    "@testing-library/user-event": "^12.1.10",
-    "babel-loader": "^8.1.0",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.8",
+    "babel-loader": "^8.2.2",
     "babel-plugin-jsx-control-statements": "^4.1.0",
-    "css-loader": "^3.6.0",
-    "eslint": "^7.12.1",
+    "css-loader": "^5.2.4",
+    "eslint": "^7.25.0",
+    "eslint-plugin-jest-dom": "^3.8.1",
     "eslint-plugin-jsx-control-statements": "^2.2.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-testing-library": "^4.1.2",
     "faker": "^4.1.0",
     "file-loader": "^6.2.0",
     "history": "^5.0.0",
     "html-webpack-plugin": "^4.5.0",
-    "jest": "^26.6.1",
+    "jest": "^26.6.3",
     "jest-prop-type-error": "^1.1.0",
-    "jest-watch-typeahead": "^0.6.1",
-    "jest-when": "^2.8.0",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^9.0.3",
-    "style-loader": "^1.3.0",
+    "jest-watch-typeahead": "^0.6.3",
+    "jest-when": "^3.2.1",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
